# ipa.c

./: .kcsignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  test.sh
lib/: emb.h  hnsw.h  libemb.c  libhnsw.c  libmmap.c  mmap.h
src/: ipa.c  ipa.h  libipa.c
